Added files and pages

--- a/cv.html
+++ b/cv.html
@@ -7,67 +7,79 @@
 
   <body>
 
+<div class="name">
+
+  emma butterworth
+
+</div>
+
     <div class="sidebar">
       <a href="gallery.html" class="sidebar">gallery</a> <br>
       <a href="links.html" class="sidebar">links</a> <br>
       <a href="info.html" class="sidebar">about</a> <br>
       <a href="explore.html" class="sidebar">explore</a><br>
-      <a href="cv.html" class="sidebar">resume</a>
+      <a href="cv.html" class="sidebar">resume</a> <br>
+      <a href="index.html" class="sidebar">home sweet home</a>
 
     </div>
 
     <div class="content">
 
-S K I L L S
+S K I L L S <br> <br>
 Adobe Creative Suite [Photoshop, Illustrator, InDesign, Premier, Dimension], Digital Graphics, Videography, Video editing, Project coordination, Creative design, Process & experiment oriented design practice, Photography, Conceptual thinker, Book design [binding, paper stock, Printing processes, formatting documents], Quick learner, Client communication, Photo editing, Resourceful, Research, Art conceptualization, Knowledge of fine arts [painting, illustration, craft/materiality], motion graphics and animation, Knowledge of typography <br> <br>
-E D U C A T I ON
-Virginia Commonwealth University of Richmond, VA Currently pursuing BFA in Graphic Design 2021 Dean’s List honoree fall 2017
-Dean’s List honoree fall 2018
-Cindy Neuschwander/1708 Gallery scholarship recipient fall 2017
-Virginia Commonwealth University merit scholarship recipient fall 2017-spring 2019
-Patrick Henry High School of Ashland, VA
-High School Advanced Diploma 2017
-Vice president of Patrick Henry International Thespian Society troupe National Art Honor Society member
-Excellence in Fine Art recipient upon graduation
-Hanover Scholar recipient
+E D U C A T I O N <br> <br>
+Virginia Commonwealth University of Richmond, VA <br> Currently pursuing BFA in Graphic Design 2021 <br> Dean’s List honoree fall 2017 <br>
+Dean’s List honoree fall 2018 <br>
+Cindy Neuschwander/1708 Gallery scholarship recipient fall 2017 <br>
+Virginia Commonwealth University merit scholarship recipient fall 2017-spring 2020 <br> <br>
+Patrick Henry High School of Ashland, VA <br>
+High School Advanced Diploma 2017<br>
+Vice president of Patrick Henry International Thespian Society troupe <br> National Art Honor Society member <br>
+Excellence in Fine Art recipient upon graduation <br>
+Hanover Scholar recipient <br>
  Ranked in Top 10% of class <br> <br>
-E X P E R I E N C E
-Film/Production | Short film Killer of Women directed by Stephen French Jr. | August 2018 to present
+E X P E R I E N C E <br> <br>
+Freelance graphic designer at Read to Them, a Richmond-based nonprofit <br>
+October 2019 to present <br>
+Work within brand identity,
+<br><br>
+Muralist for Mike Baudhuin of Culpeper, Virginia <br> December 2018 to July 2019 <br>
+Designed and painted 200 sq ft. ceiling mural,
+Created rough sketches and designed unique characters and scenes to appear in a mural,
+Used scaffolding safely, organized and implemented mural,
+Generated high quality results in a timely manner,
+Met with commission clients to discuss artistic preferences and ideas,
 Contributed ideas during strategic and conceptual brainstorming sessions
-Assisted in screenwriting & storyboarding process Developing schedules and orchestrating shoots Production design and props
-Provided creative feedback throughout the filming process Sound design/foley
-Camera operator | Upcoming documentary regarding Lamb of God’s Westboro Baptist Church protest | March 2019
-Operated camera/equipment in a congested/crowded setting
-Moved around crowd & acquired a number of angles and perspectives
-Filmed interviews with Randy Blythe [of Lamb of God] as well as member of WBC
-Muralist | Mike Baudhuin of Culpeper, Virginia — December 2018 to present
-Created rough sketches and designed unique characters and scenes to appear in a mural
-Used scaffolding safely, organized and implemented mural
-Generated high quality results in a timely manner
-Met with commission clients to discuss artistic preferences and ideas
-Contributed ideas during strategic and conceptual brainstorming sessions
-Co-founder of OXBOW Collective | Richmond, Virginia — 2018 to present
-Multi-Disciplinary creative/design collective
-Film production, poster design, motion graphics design, branding, commercial design, book design, merchandising design, and more
-Branding/identity for creative firm
-Social media presence/implementation
-Freelance Graphic Designer | Tidal Front Band of Richmond, Virginia — January 2019 to present
-Creating album art and identity for a local band
-Used skill in Adobe Illustrator to create images and layouts
-Finalized projects with touches such as adjusting image sizes and selecting fonts
-
+<br><br>
+Camera operator for upcoming documentary regarding Lamb of God’s Westboro Baptist Church protest by Don Argott <br> March 2019 <br>
+Operated camera/equipment in a congested/crowded setting,
+Moved around crowd & acquired a number of angles and perspectives,
+Filmed interviews with Randy Blythe [of Lamb of God] as well as member of WBC <br>
+<br>
+Film/Production for short film "Killer of Women" directed by Stephen French Jr. <br> August 2018 to Auguest 2019 <br>
+Contributed ideas during strategic and conceptual brainstorming sessions,
+Assisted in screenwriting & storyboarding process,
+Developing schedules and orchestrating shoots,
+Production design and props,
+Provided creative feedback throughout the filming process,
+Sound design/foley
+<br> <br>
+Freelance Graphic Designer for Tidal Front band of Richmond, Virginia <br> January 2019 to present <br>
+Creating album art and identity for a local band,
+Used skill in Adobe Illustrator to create images and layouts,
+Finalized projects with touches such as adjusting image sizes and selecting fonts,
 Worked with customers to present mockups and collect information for adjustments
-Freelance Graphic Designer | Mike Baudhuin of Culpeper, Virginia — July 2018 to September 2018
-Created a wine label for client
-Illustrated content for wine label to suit client’s intended image/identity
-Used skill in Adobe Photoshop and Adobe Illustrator to create images and layouts
-Finalized projects with touches such as adjusting image sizes and selecting fonts
-Worked with customers to present mockups and collect information for adjustments
-Generated digital image files for use in digital and traditional printing methods Utilized knowledge of production to create high quality images
+<br><br>
+Freelance Graphic Designer for Mike Baudhuin of Culpeper, Virginia <br>July 2018 to September 2018 <br>
+Created a wine label for client, Illustrated content for wine label to suit client’s intended image/identity,
+Used skill in Adobe Photoshop and Adobe Illustrator to create images and layouts,
+Finalized projects with touches such as adjusting image sizes and selecting fonts,
+Worked with customers to present mockups and collect information for adjustments,
+Generated digital image files for use in digital and traditional printing methods, Utilized knowledge of production to create high quality images,
 Met with commission clients to discuss artistic preferences and ideas  <br> <br>
 
-G O A L S
-Working with other folks to create conceptual design and film Producing high quality work in a friendly, collaborative atmosphere Connecting to people through engaging and enriching creative works
+G O A L S <br><br>
+Working with other folks to create conceptual design and film <br> <br> Producing high quality work in a friendly, collaborative atmosphere <br> <br> Connecting to people with engaging and enriching creative works
 
 
 
