--- a/explore.html
+++ b/explore.html
@@ -12,12 +12,13 @@
       <a href="links.html" class="sidebar">links</a> <br>
       <a href="info.html" class="sidebar">about</a> <br>
       <a href="explore.html" class="sidebar">explore</a><br>
-      <a href="cv.html" class="sidebar">resume</a>
+      <a href="cv.html" class="sidebar">resume</a> <br>
+      <a href="index.html" class="sidebar">home sweet home</a>
 
 
     </div>
 
-    <img src="79.jpg" style="width: 100%;">
+    <img src="1.jpg" style="width: 100%;">
 
 
     <div class="next">
