--- a/explore6.html
+++ b/explore6.html
@@ -15,11 +15,18 @@
       <a href="cv.html" class="sidebar">resume</a> <br>
       <a href="index.html" class="sidebar">home sweet home</a>
 
-    </div>
-
-    <div class="gallerycontent">
 
     </div>
+
+    <img src="63.jpg" style="width:100%;">
+
+
+    <div class="next">
+
+      <a href="explore7.html" class="next"> next </a>
+
+    </div>
+
 
 
   </body>
