--- a/explore7.html
+++ b/explore7.html
@@ -15,11 +15,25 @@
       <a href="cv.html" class="sidebar">resume</a> <br>
       <a href="index.html" class="sidebar">home sweet home</a>
 
-    </div>
-
-    <div class="gallerycontent">
 
     </div>
+
+<div style="width:30%; margin-left:200px;">
+    <img src="40.png">
+    <img src="41.png">
+    <img src="45.png">
+    <img src="49.png">
+    <img src="39.png">
+
+  </div>
+
+
+    <div class="next">
+
+      <a href="explore8.html" class="next"> next </a>
+
+    </div>
+
 
 
   </body>
