--- a/index.html
+++ b/index.html
@@ -7,19 +7,28 @@
 
   <body>
 
+    <div class="name">
+
+      emma butterworth
+
+    </div>
+
     <div class="sidebar">
       <a href="gallery.html" class="sidebar">gallery</a> <br>
       <a href="links.html" class="sidebar">links</a> <br>
       <a href="info.html" class="sidebar">about</a> <br>
       <a href="explore.html" class="sidebar">explore</a> <br>
-      <a href="cv.html" class="sidebar">resume</a>
+      <a href="cv.html" class="sidebar">resume</a> <br>
+      <a href="index.html" class="sidebar">home sweet home</a>
 
     </div>
 
-    <div class="content">
 
 
-    </div>
+<img src="89.jpg" style="margin-top: 20%; margin-left: 30%; position:fixed;">
+
+
+
 
 
 
