--- a/info.html
+++ b/info.html
@@ -7,35 +7,47 @@
 
   <body>
 
-    <img src="" style="" >
+    <div class="name">
 
-    <div class="content">
+      emma butterworth
 
-    Originally from Wolftown, Virginia, I moved around central Virginia throughout my adolescence. This lead me to Richmond, where I split my time between working as a freelance graphic designer for the Richmond-based nonprofit Read to Them, being enrolled as a full-time student in Virginia Commonwealth University’s graphic design program, and working on a number of personal projects (writing a short film, doing a series of paintings, etc.).
+    </div>
 
-    I work with illustration, typography, film, photo, collage, motion graphics, painting, and writing (usually by merging them)–I try to explore new mediums while also fostering my knowledge of those that I use most often. Portraiture was my first love in art-making and it’s still my go-to: I love finding new ways of communicating emotion, stories, and the human experience through faces and expression.
 
-    My process is research-oriented; when I begin a new project I spend a significant amount of time up-front searching for and curating relevant information. Literature and film are also HUGE influences–I’ve loved to read ever since I was able and it’s my firm belief that nothing impacts people like stories and the way you tell them. I’m still very much in the early stages of finding myself creatively and I’m presently in a constant state of exploration.
+    <div class="content" style="padding: 0px; ">
 
-    I’m drawn to the absurd and surreal: David Lynch, Michael Bulgakov, Haruki Murakami, as well as the experiential, raw, human, character-driven: Raymond Carver, Renny Sparks, Natural Selection/Robbie Pickering, Frances Ha/Noah Baumbach, Nebraska/Alexander Payne, Wristcutters/Goran Dukic. I have a number of visual influences, which you can find here.
+      <img src="me.png" style="width:60%; margin-right: 82%; margin-left: 18%;" > <br> <br>
+
+    I'm a graphic designer/painter/creative-type person based out of Richmond, Virginia where I split my time between working as a freelance graphic designer for the Richmond-based nonprofit Read to Them, being enrolled as a full-time student in Virginia Commonwealth University’s graphic design program, and working on a number of personal projects.
+
+  My practice consists of work with illustration, typography, film, photo, collage, motion graphics, painting, and writing (usually by merging these mediums). Experimentation, education and exploration are essential to my work, and I try to explore new methods while also fostering my knowledge of those that I use most often. Portraiture was my first love in art-making and it’s still my go-to: I love finding new ways of communicating stories and the human experience through faces and expressions. My process is research-oriented; when I begin a new project I spend a significant amount of time up-front searching for and curating relevant information. Literature and film are also HUGE influences–I’ve loved to read ever since I was able and it’s my firm belief that nothing impacts people like stories and the way you tell them. I’m still very much in the early stages of finding myself creatively and I’m presently in a constant state of exploration.
+
+    I’m drawn to the absurd and surreal, the experiential, raw, human, and character-driven. I have a number of visual influences, which you can find in my pinterest link on the links page.
 
     I hope to make films, paintings, illustrations, and stories that stay with folks and make them laugh, cry, rethink the world they live in, and generally have a lasting impression.
 
 <br>
 <br>
 
-    contact:
-    emnbutterworth@gmail.com
+    C O N T A C T <br>
+    emnbutterworth@gmail.com <br>
     434.305.4904
+<br>
+<br>
+
+    <img src="3.png" style="width: 90%;">
 
     </div>
+
+
 
     <div class="sidebar">
       <a href="gallery.html" class="sidebar">gallery</a> <br>
       <a href="links.html" class="sidebar">links</a> <br>
       <a href="info.html" class="sidebar">about</a> <br>
       <a href="explore.html" class="sidebar">explore</a><br>
-      <a href="cv.html" class="sidebar">resume</a>
+      <a href="cv.html" class="sidebar">resume</a> <br>
+      <a href="index.html" class="sidebar">home sweet home</a>
 
 
     </div>
