--- a/explore3.html
+++ b/explore3.html
@@ -15,11 +15,18 @@
       <a href="cv.html" class="sidebar">resume</a> <br>
       <a href="index.html" class="sidebar">home sweet home</a>
 
-    </div>
-
-    <div class="gallerycontent">
 
     </div>
+
+    <img src="22.png" style="width: 100%;">
+
+
+    <div class="next">
+
+      <a href="explore4.html" class="next"> next </a>
+
+    </div>
+
 
 
   </body>
