--- a/explore4.html
+++ b/explore4.html
@@ -15,11 +15,18 @@
       <a href="cv.html" class="sidebar">resume</a> <br>
       <a href="index.html" class="sidebar">home sweet home</a>
 
-    </div>
-
-    <div class="gallerycontent">
 
     </div>
+
+    <img src="28.png" style=" margin-left: 300px; margin-right: 100px; margin-top: 100px;">
+
+
+    <div class="next">
+
+      <a href="explore5.html" class="next"> next </a>
+
+    </div>
+
 
 
   </body>
