--- a/explore5.html
+++ b/explore5.html
@@ -15,11 +15,18 @@
       <a href="cv.html" class="sidebar">resume</a> <br>
       <a href="index.html" class="sidebar">home sweet home</a>
 
-    </div>
-
-    <div class="gallerycontent">
 
     </div>
+
+    <img src="31.png" style="width: 38%; margin-left:500px;">
+
+
+    <div class="next">
+
+      <a href="explore6.html" class="next"> next </a>
+
+    </div>
+
 
 
   </body>
