--- a/links.html
+++ b/links.html
@@ -7,12 +7,14 @@
 
   <body>
 
+
     <div class="sidebar">
       <a href="gallery.html" class="sidebar">gallery</a> <br>
       <a href="links.html" class="sidebar">links</a> <br>
       <a href="info.html" class="sidebar">about</a> <br>
       <a href="explore.html" class="sidebar">explore</a><br>
-      <a href="cv.html" class="sidebar">resume</a>
+      <a href="cv.html" class="sidebar">resume</a> <br>
+      <a href="index.html" class="sidebar">home sweet home</a>
 
 
     </div>
