added content and pages

--- a/explore10.html
+++ b/explore10.html
@@ -18,13 +18,12 @@
 
     </div>
 
-    <img src="24.jpg" style="margin-left:270px;">
-    <img src="2000.png" style="margin-left:80px; width:100%;">
+    <img src="611.png" style="width:34%;margin-left:600px;">
 
 
     <div class="next">
 
-      <a href="explore9.html" class="next"> next </a>
+      <a href="explore11.html" class="next"> next </a>
 
     </div>
 
