--- a/explore7.html
+++ b/explore7.html
@@ -18,12 +18,19 @@
 
     </div>
 
-<div style="width:30%; margin-left:200px;">
+<div style="width:5%; margin-left:200px;">
     <img src="40.png">
     <img src="41.png">
     <img src="45.png">
     <img src="49.png">
     <img src="39.png">
+    <img src="00.png">
+    <img src="000.png">
+    <img src="0000.png">
+    <img src="002.png">
+    <img src="0002.png">
+    <img src="0004.png">
+    <img src="000001.png">
 
   </div>
 
