--- a/explore12.html
+++ b/explore12.html
@@ -18,13 +18,12 @@
 
     </div>
 
-    <img src="24.jpg" style="margin-left:270px;">
-    <img src="2000.png" style="margin-left:80px; width:100%;">
+    <img src="43.jpg" style="width:100%;">
 
 
     <div class="next">
 
-      <a href="explore9.html" class="next"> next </a>
+      <a href="explore13.html" class="next"> next </a>
 
     </div>
 
