Changed pages and added content

--- a/links.html
+++ b/links.html
@@ -7,14 +7,19 @@
 
   <body>
 
+    <div class="name">
+
+      emma butterworth
+
+    </div>
 
     <div class="sidebar">
-      <a href="gallery.html" class="sidebar">gallery</a> <br>
-      <a href="links.html" class="sidebar">links</a> <br>
-      <a href="info.html" class="sidebar">about</a> <br>
-      <a href="explore.html" class="sidebar">explore</a><br>
-      <a href="cv.html" class="sidebar">resume</a> <br>
-      <a href="index.html" class="sidebar">home sweet home</a>
+      <a href="portfolio.html">portfolio</a>
+      <a href="links.html">links</a>
+      <a href="info.html">about</a>
+      <a href="explore.html">explore</a>
+      <a href="cv.html">resume</a>
+      <a href="index.html">home sweet home</a>
 
 
     </div>
