--- a/explore10.html
+++ b/explore10.html
@@ -7,6 +7,12 @@
 
   <body>
 
+    <div class="name">
+
+      emma butterworth
+
+    </div>
+
     <div class="sidebar">
       <a href="portfolio.html">portfolio</a>
       <a href="links.html">links</a>
@@ -23,7 +29,7 @@
 
     <div class="next">
 
-      <a href="explore11.html" class="next"> next </a>
+      <a href="explore12.html" class="next"> next </a>
 
     </div>
 
