--- a/explore15.html
+++ b/explore15.html
@@ -7,6 +7,12 @@
 
   <body>
 
+    <div class="name">
+
+      emma butterworth
+
+    </div>
+
     <div class="sidebar">
       <a href="portfolio.html">portfolio</a>
       <a href="links.html">links</a>
