--- a/explore24.html
+++ b/explore24.html
@@ -24,12 +24,12 @@
 
     </div>
 
-    <img src="ff.png" style="width:70%;">
+    <img src="ss.png" style="width:70%; margin-left:220px;">
 
 
     <div class="next">
 
-      <a href="explore23.html" class="next"> next </a>
+      <a href="explore25.html" class="next"> next </a>
 
     </div>
 
