--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
     <div class="content">
 
 S K I L L S <br> <br>
-Adobe Creative Suite [Photoshop, Illustrator, InDesign, Premier, Dimension], Digital Graphics, Videography, Video editing, Project coordination, Creative design, Process & experiment oriented design practice, Photography, Conceptual thinker, Book design [binding, paper stock, Printing processes, formatting documents], Quick learner, Client communication, Photo editing, Resourceful, Research, Art conceptualization, Knowledge of fine arts [painting, illustration, craft/materiality], motion graphics and animation, Knowledge of typography <br> <br>
+Adobe Creative Suite [Photoshop, Illustrator, InDesign, Premier, Dimension], Digital Graphics, Videography, Video editing, Project coordination, Creative design, Process & experiment oriented design practice, Photography, Conceptual thinker, Book design [binding, paper stock, Printing processes, formatting documents], Quick learner, Client communication, Photo editing, Resourceful, Research, Art conceptualization, Knowledge of fine arts [painting, illustration, craft/materiality], motion graphics and animation, Knowledge of typography, web design <br> <br>
 E D U C A T I O N <br> <br>
 Virginia Commonwealth University of Richmond, VA <br> Currently pursuing BFA in Graphic Design 2021 <br> Dean’s List honoree fall 2017 <br>
 Dean’s List honoree fall 2018 <br>
@@ -41,7 +41,11 @@ Hanover Scholar recipient <br>
 E X P E R I E N C E <br> <br>
 Freelance graphic designer at Read to Them, a Richmond-based nonprofit <br>
 October 2019 to present <br>
-Work within brand identity,
+Work within brand identity,designing printed materials, video editing, illustration, film/production, photography, poster design, calendar design, web design.
+<br><br>
+Freelance/commissioned painter <br>
+Ongoing <br>
+Commissioned to paint primarily portraits, as well as pet portraits
 <br><br>
 Muralist for Mike Baudhuin of Culpeper, Virginia <br> December 2018 to July 2019 <br>
 Designed and painted 200 sq ft. ceiling mural,
@@ -79,7 +83,7 @@ Generated digital image files for use in digital and traditional printing method
 Met with commission clients to discuss artistic preferences and ideas  <br> <br>
 
 G O A L S <br><br>
-Working with other folks to create conceptual design and film <br> <br> Producing high quality work in a friendly, collaborative atmosphere <br> <br> Connecting to people with engaging and enriching creative works
+Working to create conceptual design and film <br> <br> Producing high quality work in a friendly, collaborative atmosphere <br> <br> Connecting to people with engaging and enriching creative works
 
 
 
