--- a/cv.html
+++ b/cv.html
@@ -23,11 +23,11 @@
 
     </div>
 
-    <div class="content">
+    <div class="content" style="top: 150px;">
 
-S K I L L S <br> <br>
+<p style="text-align: center;"> S K I L L S </p> <br> <br>
 Adobe Creative Suite [Photoshop, Illustrator, InDesign, Premier, Dimension], Digital Graphics, Videography, Video editing, Project coordination, Creative design, Process & experiment oriented design practice, Photography, Conceptual thinker, Book design [binding, paper stock, Printing processes, formatting documents], Quick learner, Client communication, Photo editing, Resourceful, Research, Art conceptualization, Knowledge of fine arts [painting, illustration, craft/materiality], motion graphics and animation, Knowledge of typography, web design <br> <br>
-E D U C A T I O N <br> <br>
+<p style="text-align: center;"> E D U C A T I O N </p> <br> <br>
 Virginia Commonwealth University of Richmond, VA <br> Currently pursuing BFA in Graphic Design 2021 <br> Dean’s List honoree fall 2017 <br>
 Dean’s List honoree fall 2018 <br>
 Cindy Neuschwander/1708 Gallery scholarship recipient fall 2017 <br>
@@ -37,8 +37,8 @@ High School Advanced Diploma 2017<br>
 Vice president of Patrick Henry International Thespian Society troupe <br> National Art Honor Society member <br>
 Excellence in Fine Art recipient upon graduation <br>
 Hanover Scholar recipient <br>
- Ranked in Top 10% of class <br> <br>
-E X P E R I E N C E <br> <br>
+Ranked in Top 10% of class <br> <br>
+<p style="text-align: center;"> E X P E R I E N C E </p> <br> <br>
 Freelance graphic designer at Read to Them, a Richmond-based nonprofit <br>
 October 2019 to present <br>
 Work within brand identity,designing printed materials, video editing, illustration, film/production, photography, poster design, calendar design, web design.
@@ -82,7 +82,7 @@ Worked with customers to present mockups and collect information for adjustments
 Generated digital image files for use in digital and traditional printing methods, Utilized knowledge of production to create high quality images,
 Met with commission clients to discuss artistic preferences and ideas  <br> <br>
 
-G O A L S <br><br>
+<p style="text-align: center;"> G O A L S </p> <br><br>
 Working to create conceptual design and film <br> <br> Producing high quality work in a friendly, collaborative atmosphere <br> <br> Connecting to people with engaging and enriching creative works
 
 
