--- a/explore10.html
+++ b/explore10.html
@@ -24,7 +24,7 @@
 
     </div>
 
-    <img src="611.png" style="width:34%;margin-left:600px;">
+    <img src="611.png" style="width:34%;margin-left:530px; margin-top: 50px;">
 
 
     <div class="next">
