--- a/explore12.html
+++ b/explore12.html
@@ -13,6 +13,8 @@
 
     </div>
 
+      <img src="43.jpg" style="width:90%; margin-top: 50px; margin-left: 200px;">
+
     <div class="sidebar">
       <a href="portfolio.html">portfolio</a>
       <a href="links.html">links</a>
@@ -23,8 +25,6 @@
 
 
     </div>
-
-    <img src="43.jpg" style="width:100%;">
 
 
     <div class="next">
