--- a/explore5.html
+++ b/explore5.html
@@ -24,7 +24,7 @@
 
     </div>
 
-    <img src="31.png" style="width: 38%; margin-left:500px;">
+    <img src="31.png" style="width: 38%; margin-left:500px; margin-top:50px; ">
 
 
     <div class="next">
