--- a/portfolio.html
+++ b/portfolio.html
@@ -23,16 +23,16 @@
 
     </div>
 
-    <div class="linkscontent" style="margin-left:600px;">
+    <div class="linkscontent" style="margin-left:610px;">
 
     <a href="https://ebutterworth-art.github.io/class-site/">handmade web class site</a> <br><br>
     <a href=" ">paintings</a><br><br>
     <a href=" "> neel mobile </a><br><br>
     <a href=" "> martens, a typeface </a><br><br>
     <a href=" "> words </a><br><br>
-    <a href=" "> project </a>
-    <a href=" "> project </a>
-    <a href=" "> project </a>
+    <a href=" "> project </a><br><br>
+    <a href=" "> project </a><br><br>
+    <a href=" "> project </a><br><br>
     <a href=" "> assorted works </a>
 
 
