--- a/explore1a.html
+++ b/explore1a.html
@@ -24,12 +24,12 @@
 
     </div>
 
-    <img src="611.png" style="width:34%;margin-left:530px; margin-top: 50px;">
+    <img src="grass.gif" style="width: 100%; margin-top:10px;">
 
 
     <div class="next">
 
-      <a href="explore11.html" class="next"> next </a>
+      <a href="explore2.html" class="next"> next </a>
 
     </div>
 
