--- a/explore3a.html
+++ b/explore3a.html
@@ -24,12 +24,12 @@
 
     </div>
 
-    <img src="611.png" style="width:34%;margin-left:530px; margin-top: 50px;">
+    <img src="bls.png" style="width: 70%; margin-left:200px;">
 
 
     <div class="next">
 
-      <a href="explore11.html" class="next"> next </a>
+      <a href="explore4.html" class="next"> next </a>
 
     </div>
 
