--- a/explore1.html
+++ b/explore1.html
@@ -24,12 +24,12 @@
 
     </div>
 
-    <img src="611.png" style="width:34%;margin-left:530px; margin-top: 50px;">
+    <img src="bbb.jpeg" style="width: 60%; margin-left:320px; margin-top:70px;">
 
 
     <div class="next">
 
-      <a href="explore11.html" class="next"> next </a>
+      <a href="explore1a.html" class="next"> next </a>
 
     </div>
 
