--- a/explore11.html
+++ b/explore11.html
@@ -24,12 +24,12 @@
 
     </div>
 
-    <img src="611.png" style="width:34%;margin-left:530px; margin-top: 50px;">
+    <img src="hung.gif" style="width: 40%; margin-left:485px;">
 
 
     <div class="next">
 
-      <a href="explore11.html" class="next"> next </a>
+      <a href="explore12.html" class="next"> next </a>
 
     </div>
 
