--- a/explore2.html
+++ b/explore2.html
@@ -29,7 +29,7 @@
 
     <div class="next">
 
-      <a href="explore3.html" class="next"> next </a>
+      <a href="explore2a.html" class="next"> next </a>
 
     </div>
 
