--- a/explore2a.html
+++ b/explore2a.html
@@ -24,12 +24,12 @@
 
     </div>
 
-    <img src="611.png" style="width:34%;margin-left:530px; margin-top: 50px;">
+    <img src="dreamboat.gif" style="width: 100%;">
 
 
     <div class="next">
 
-      <a href="explore11.html" class="next"> next </a>
+      <a href="explore3.html" class="next"> next </a>
 
     </div>
 
