--- a/explore3.html
+++ b/explore3.html
@@ -29,7 +29,7 @@
 
     <div class="next">
 
-      <a href="explore4.html" class="next"> next </a>
+      <a href="explore3a.html" class="next"> next </a>
 
     </div>
 
