--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
     <a href=" "> neel mobile </a><br><br>
     <a href=" "> martens, a typeface </a><br><br>
     <a href=" "> words </a><br><br>
-    <a href=" "> project </a><br><br>
+    <a href=" "> sketchbook </a><br><br>
     <a href=" "> project </a><br><br>
     <a href=" "> project </a><br><br>
     <a href=" "> assorted works </a>
