--- a/explore13.html
+++ b/explore13.html
@@ -29,7 +29,7 @@
 
     <div class="next">
 
-      <a href="explore14.html" class="next"> next </a>
+      <a href="explore13a.html" class="next"> next </a>
 
     </div>
 
