--- a/explore13a.html
+++ b/explore13a.html
@@ -24,14 +24,13 @@
 
     </div>
 
-    <img src="close2.jpg" style="width:100%;">
-<img src="bab.jpeg" style="width:100%;">
-
-
+    <img src="mom1.jpeg" style="width:100%;">
+<img src="mom2.jpeg" style="width:100%;">
+<img src="mom3.jpeg" style="width:100%;">
 
     <div class="next">
 
-      <a href="explore26.html" class="next"> next </a>
+      <a href="explore13b.html" class="next"> next </a>
 
     </div>
 
