--- a/explore17.html
+++ b/explore17.html
@@ -29,7 +29,7 @@
 
     <div class="next">
 
-      <a href="explore18.html" class="next"> next </a>
+      <a href="explore17a.html" class="next"> next </a>
 
     </div>
 
