--- a/explore19a.html
+++ b/explore19a.html
@@ -24,14 +24,12 @@
 
     </div>
 
-    <img src="close2.jpg" style="width:100%;">
-<img src="bab.jpeg" style="width:100%;">
-
+    <img src="1.gif" style="width: 40%; margin-left:300px;">
 
 
     <div class="next">
 
-      <a href="explore26.html" class="next"> next </a>
+      <a href="explore20.html" class="next"> next </a>
 
     </div>
 
