--- a/explore20.html
+++ b/explore20.html
@@ -29,7 +29,7 @@
 
     <div class="next">
 
-      <a href="explore21.html" class="next"> next </a>
+      <a href="explore20a.html" class="next"> next </a>
 
     </div>
 
