--- a/explore24b.html
+++ b/explore24b.html
@@ -23,15 +23,15 @@
 
 
     </div>
-
-    <img src="close2.jpg" style="width:100%;">
-<img src="bab.jpeg" style="width:100%;">
-
-
+<div style="margin-top:230px; margin-left:20px;">
+    <img src="um.gif" style="width:32%;">
+    <img src="uh.gif" style="width:32%;">
+    <img src="up.gif" style="width:33.8%;">
+</div>
 
     <div class="next">
 
-      <a href="explore26.html" class="next"> next </a>
+      <a href="explore24c.html" class="next"> next </a>
 
     </div>
 
