--- a/explore24c.html
+++ b/explore24c.html
@@ -24,14 +24,12 @@
 
     </div>
 
-    <img src="close2.jpg" style="width:100%;">
-<img src="bab.jpeg" style="width:100%;">
-
+    <img src="mary.jpg" style="width:90%;">
 
 
     <div class="next">
 
-      <a href="explore26.html" class="next"> next </a>
+      <a href="explore24d.html" class="next"> next </a>
 
     </div>
 
