--- a/explore24d.html
+++ b/explore24d.html
@@ -24,14 +24,12 @@
 
     </div>
 
-    <img src="close2.jpg" style="width:100%;">
-<img src="bab.jpeg" style="width:100%;">
-
+    <img src="old.gif" style="width:35%; margin-left:520px;">
 
 
     <div class="next">
 
-      <a href="explore26.html" class="next"> next </a>
+      <a href="explore25.html" class="next"> next </a>
 
     </div>
 
