--- a/explore26.html
+++ b/explore26.html
@@ -35,7 +35,7 @@
 
     <div class="next">
 
-      <a href="explore27.html" class="next"> next </a>
+      <a href="explore26a.html" class="next"> next </a>
 
     </div>
 
