--- a/explore8.html
+++ b/explore8.html
@@ -30,7 +30,7 @@
 
     <div class="next">
 
-      <a href="explore9.html" class="next"> next </a>
+      <a href="explore8a.html" class="next"> next </a>
 
     </div>
 
