--- a/explore8a.html
+++ b/explore8a.html
@@ -24,14 +24,12 @@
 
     </div>
 
-    <img src="close2.jpg" style="width:100%;">
-<img src="bab.jpeg" style="width:100%;">
-
+    <img src="g.gif" style="width:50%; margin-top:70px; margin-left:400px;">
 
 
     <div class="next">
 
-      <a href="explore26.html" class="next"> next </a>
+      <a href="explore9.html" class="next"> next </a>
 
     </div>
 
