--- a/explore10.html
+++ b/explore10.html
@@ -29,7 +29,7 @@
 
     <div class="next">
 
-      <a href="explore11.html" class="next"> next </a>
+      <a href="explore10a.html" class="next"> next </a>
 
     </div>
 
