--- a/explore13b.html
+++ b/explore13b.html
@@ -24,14 +24,11 @@
 
     </div>
 
-    <img src="close2.jpg" style="width:100%;">
-<img src="bab.jpeg" style="width:100%;">
-
-
+    <img src="101.jpg" style="width:100%;">
 
     <div class="next">
 
-      <a href="explore26.html" class="next"> next </a>
+      <a href="explore14.html" class="next"> next </a>
 
     </div>
 
