--- a/explore19.html
+++ b/explore19.html
@@ -29,7 +29,7 @@
 
     <div class="next">
 
-      <a href="explore20.html" class="next"> next </a>
+      <a href="explore19a.html" class="next"> next </a>
 
     </div>
 
