--- a/explore24.html
+++ b/explore24.html
@@ -29,7 +29,7 @@
 
     <div class="next">
 
-      <a href="explore25.html" class="next"> next </a>
+      <a href="explore24a.html" class="next"> next </a>
 
     </div>
 
