--- a/explore26a.html
+++ b/explore26a.html
@@ -24,14 +24,13 @@
 
     </div>
 
-    <img src="close2.jpg" style="width:100%;">
-<img src="bab.jpeg" style="width:100%;">
-
+    <img src="93.jpg" style="width:100%">
+    
 
 
     <div class="next">
 
-      <a href="explore26.html" class="next"> next </a>
+      <a href="explore27.html" class="next"> next </a>
 
     </div>
 
