Added more content

--- a/explore26a.html
+++ b/explore26a.html
@@ -24,13 +24,14 @@
 
     </div>
 
-    <img src="93.jpg" style="width:100%">
-    
-
+<div style="margin-top:190px; margin-left:300px;">
+    <img src="sonof.gif" style="width:40%">
+    <img src="song.gif" style="width:40%">
+</div>
 
     <div class="next">
 
-      <a href="explore27.html" class="next"> next </a>
+      <a href="explore26b.html" class="next"> next </a>
 
     </div>
 
