--- a/explore31a.html
+++ b/explore31a.html
@@ -24,13 +24,12 @@
 
     </div>
 
-    <img src="66.jpg" style="width:30%; margin-top:100px; margin-left:550px;"> <br>
-    <img src="67.jpg" style="width:30%; margin-top:100px; margin-left: 550px;"> <br>
-  <img src="69.jpg" style="width:30%; margin-top:100px; margin-left:550px;">
+    <img src="type2.gif" style="width:100%">
+
 
     <div class="next">
 
-      <a href="explore34a.html" class="next"> next </a>
+      <a href="explore32.html" class="next"> next </a>
 
     </div>
 
