--- a/explore26b.html
+++ b/explore26b.html
@@ -24,13 +24,13 @@
 
     </div>
 
-    <img src="66.jpg" style="width:30%; margin-top:100px; margin-left:550px;"> <br>
-    <img src="67.jpg" style="width:30%; margin-top:100px; margin-left: 550px;"> <br>
-  <img src="69.jpg" style="width:30%; margin-top:100px; margin-left:550px;">
+
+    <img src="wow.jpeg" style="width:100%">
+
 
     <div class="next">
 
-      <a href="explore34a.html" class="next"> next </a>
+      <a href="explore27.html" class="next"> next </a>
 
     </div>
 
