--- a/explore28.html
+++ b/explore28.html
@@ -29,7 +29,7 @@
 
     <div class="next">
 
-      <a href="explore29.html" class="next"> next </a>
+      <a href="explore28a.html" class="next"> next </a>
 
     </div>
 
