--- a/explore31.html
+++ b/explore31.html
@@ -29,7 +29,7 @@
 
     <div class="next">
 
-      <a href="explore32.html" class="next"> next </a>
+      <a href="explore31a.html" class="next"> next </a>
 
     </div>
 
