--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
 </div>
 
-<img src="embutterworth.jpeg" style="width:60%; margin-left:350px; margin-top:130px;"
-
+<img src="index.jpeg" style="width: 50%; margin-top:100px; margin-left:400px;">
 
 
 
