--- a/links.html
+++ b/links.html
@@ -24,6 +24,8 @@
 
     </div>
 
+    <img src="rub.gif" style="width:35%;position:absolute; margin-left: 1070px;margin-top:30px;">
+
     <div class="linkscontent">
       <a href="https://twitter.com/EmmaButterwor20" class="linkscontent">twitter</a> <br>
       <a href="https://www.instagram.com/ebutterwrth/" class="linkscontent">instagram</a> <br>
