--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,9 @@
 
     </div>
 
+<img src="ooo.gif" style="width:25%; margin-top:80px;margin-left:1097px; position: absolute;;">
+<img src="gum.gif" style="width:20%; margin-top:0px;margin-left:200px; position: absolute;;">
+
     <div class="linkscontent" style="margin-left:610px;">
 
     <a href="https://ebutterworth-art.github.io/class-site/">handmade web class site</a> <br><br>
