--- a/info.html
+++ b/info.html
@@ -16,8 +16,10 @@
 <img src="bbb.png">
 
 <div class="content" style="text-align: left; top: 100px; width: 550px; left:10%;">
-Richmond-based graphic designer with Read to Them, painter, amateur filmmaker, VCU student.
-<br>
+Richmond-based graphic designer with Read to Them, painter, amateur filmmaker, VCU student. <br>
+I really want to make immersive, emotional, impactful design, films, and art. <br>
+I'd like to take people's breath away, or at the very least make them say "huh."(like a thoughtful "huh", not a questioning "huh"). <br>
+I don't take myself too seriously, and neither does my work, though I care a lot.<br>
 <br>
 
     C O N T A C T <br>
