--- a/portfolio.html
+++ b/portfolio.html
@@ -30,12 +30,14 @@
 
     <a href="https://ebutterworth-art.github.io/class-site/">handmade web class site</a> <br><br>
     <a href=" ">paintings</a><br><br>
-    <a href=" "> neel mobile </a><br><br>
+    <a href=" ">  </a><br><br>
     <a href=" "> martens, a typeface </a><br><br>
     <a href=" "> words </a><br><br>
     <a href=" "> sketchbook </a><br><br>
-    <a href=" "> project </a><br><br>
-    <a href=" "> project </a><br><br>
+    <a href=" "> design fiction </a><br><br>
+    <a href=" "> quarantine </a><br><br>
+    <a href=" "> truths: a book </a><br><br>
+    <a href=" "> collection </a><br><br>
     <a href=" "> assorted works </a>
 
 
