--- a/info.html
+++ b/info.html
@@ -15,16 +15,21 @@
 
 <img src="bbb.png">
 
-<div class="content" style="text-align: left; top: 100px; width: 550px; left:10%;">
-Richmond-based graphic designer with Read to Them, painter, amateur filmmaker, VCU student. <br>
-I really want to make immersive, emotional, impactful design, films, and art. <br>
-I'd like to take people's breath away, or at the very least make them say "huh."(like a thoughtful "huh", not a questioning "huh"). <br>
-I don't take myself too seriously, and neither does my work, though I care a lot.<br>
-<br>
+<div class="content" style="text-align: left; top: 100px; width: 550px; left:9%;">
+Richmond-based freelance graphic designer & videographer & illustrator (currently with Read to Them), painter, amateur filmmaker, image maker, full-time VCU student.
+I really want to make immersive, emotional, impactful design and films.
+I'd like to take people's breath away, or at the very least make them say "huh" (like a thoughtful "huh", not a questioning "huh").
+I don't take myself too seriously, and neither does my work, though I care a lot.
+I'd like to make work that actually does something.
 
+Feel free to reach out if you're interested in my design, videography, or painting services.
+<br>
+<p style="text-align:right;">
     C O N T A C T <br>
     emnbutterworth@gmail.com <br>
     434.305.4904
+
+  </p>
 <br>
 <br>
 
