--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     <a href="https://ebutterworth-art.github.io/class-site/">handmade web class site</a> <br><br>
     <a href=" ">paintings</a><br><br>
     <a href=" "> windan farm publication </a><br><br>
-    <a href=" "> martens, a typeface </a><br><br>
+    <a href="martens.html"> martens, a typeface </a><br><br>
     <a href=" "> words </a><br><br>
     <a href=" "> sketchbook </a><br><br>
     <a href=" "> design fiction </a><br><br>
