--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 </div>
 
-<img src="index.jpeg" style="width: 50%; margin-top:100px; margin-left:400px;">
+<img src="33.jpg" style="width: 30%; margin-top:120px; margin-left:570px;">
 
 
 
