--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 </div>
 
-<img src="33.jpg" style="width: 30%; margin-top:120px; margin-left:570px;">
+<img src="if.gif" style="width: 100%;">
 
 
 
