--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title> a real piece of work </title>
+    <link rel="icon"href="fav.png">
     <link rel="stylesheet" href="style.css">
   </head>
 
