--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,9 @@
     <a href="martens.html"> martens, a typeface </a><br><br>
     <a href=" "> words </a><br><br>
     <a href=" "> sketchbook </a><br><br>
-    <a href=" "> design fiction </a><br><br>
-    <a href=" "> quarantine </a><br><br>
+    <a href=" "> quarantinethings </a><br><br>
     <a href=" "> truths: a book </a><br><br>
+    <a href=" "> portrait gallery </a><br><br>
     <a href=" "> collection </a><br><br>
 
 
