--- a/portfolio.html
+++ b/portfolio.html
@@ -29,15 +29,14 @@
     <div class="linkscontent" style="margin-left:610px;">
 
     <a href="https://ebutterworth-art.github.io/class-site/">handmade web class site</a> <br><br>
-    <a href=" ">paintings</a><br><br>
-    <a href=" "> windan farm publication </a><br><br>
+    <a href=" "> portrait gallery </a><br><br>
+    <a href=" "> collection </a><br><br>
+    <a href=" "> publications </a><br><br>
     <a href="martens.html"> martens, a typeface </a><br><br>
+    <a href=" "> lovestory, a typeface </a><br><br>
     <a href=" "> words </a><br><br>
     <a href=" "> sketchbook </a><br><br>
     <a href=" "> quarantinethings </a><br><br>
-    <a href=" "> truths: a book </a><br><br>
-    <a href=" "> portrait gallery </a><br><br>
-    <a href=" "> collection </a><br><br>
 
 
 
