--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
 </div>
 
+
+<img src="logo1.png" style="width: 20%; right:0px; bottom:0px; position:fixed;">
+
 <img src="if.gif" style="width: 100%;">
 
 
