--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 </div>
 
 
+<img src="logo1.png" style="width: 20%; right:0px; bottom:0px; position:fixed;">
+
+<img src="if.gif" style="width: 100%;">
+
+
 
 
 
